--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ouim/simple-logto",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A simpler way to use @logto/react with prebuilt UI components and hooks for fast authentication setup",
   "type": "module",
   "main": "dist/index.js",
@@ -33,7 +33,8 @@
     "build:tsc": "tsc",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "publish": "npm publish --access public"
   },
   "peerDependencies": {
     "@logto/react": "^2.0.0",
@@ -69,6 +70,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/thezem/simple-logto"
+    "url": "git+https://github.com/thezem/simple-logto.git"
   }
 }
