feat: add project guidelines, update version to 0.1.4, and enhance cookie handling in Express middleware

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ouim/simple-logto",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A simpler way to use @logto/react with prebuilt UI components and hooks for fast authentication setup",
   "type": "module",
   "main": "dist/index.js",
@@ -49,11 +49,13 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookie-parser": "^1.4.7",
     "jose": "^6.0.11",
     "lucide-react": "^0.344.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/node": "^22.15.30",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
