--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "cookie-parser": "^1.4.7",
     "jose": "^6.0.11",
     "lucide-react": "^0.344.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "vitest": "^4.0.18"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
