--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ouim/simple-logto",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "A simpler way to use @logto/react with prebuilt UI components and hooks for fast authentication setup",
   "type": "module",
   "main": "dist/index.js",
@@ -42,9 +42,9 @@
     "publish": "npm publish --access public"
   },
   "peerDependencies": {
-    "@logto/react": "^2.0.0",
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "@logto/react": "^3.0.0 || ^4.0.0",
+    "react": "^17.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^4.6.2",
@@ -56,16 +56,16 @@
     "clsx": "^2.1.0",
     "cookie-parser": "^1.4.7",
     "jose": "^6.0.11",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "^0.575.0",
     "tailwind-merge": "^2.2.1",
     "vitest": "^4.0.18"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
     "@types/node": "^22.15.30",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^5.0.4",
     "vite": "^4.0.0"
   },
   "keywords": [
